discussion/kv_engine/185684/185684_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Enable history scan for CDC backfill

Replace the todo markers with code that now utilises the magma history
API - this now means scanAllVersions for example is hooked into the
magma history scanning API.

Add new tests that validate multiple versions can be stored and
returned.

Also required are changes to unit tests to respect new expectation
checks that occur in magma - primarily that flushing writes ordered
batches - this is only a problem for tests which bypass the flusher
and call KVStore directly.

Change-Id: I2f91ade0ee96eff0058c7fafacbc0aca7cda1b02

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-31 13:46:24.000000000
Message: 
Uploaded patch set 3: New patch set was added with same tree, parent, and commit message as Patch Set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-31 13:46:35.000000000
Message: 
Patch Set 3: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/335224/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-31 13:56:00.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1167/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1167/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/945/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/945/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/986/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/986/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/975/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28: error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore" [clang-diagnostic-error]
                  kvstore->getHistoryStartSeqno(vbid).value_or(~0ull));
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2044:69: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:164:40: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/975/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/975/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/988/ : FAILURE

Compile error at [2023-01-31T13:50:08.698Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/988/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/968/ : FAILURE

Compile error at [2023-01-31T13:48:10.778Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/968/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/990/ : FAILURE

Compile error at [2023-01-31T13:50:45.862Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28:
error: ?class MockMagmaKVStore? has no member named ?getHistoryStartSeqno?; did you mean ?historyStartSeqno??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/990/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/996/ : FAILURE

Compile error at [2023-01-31T13:49:29.430Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/996/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1288/ : FAILURE

Compile error at [2023-01-31T13:55:02.604Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1288/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22458/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/997/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
